# otel

./: Makefile  README.md  pyproject.toml
otel/: app.py
