[tool.poetry]
name = "otel"
version = "0.1.0"
description = ""
authors = ["Brian Elliott <brian@lambdal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "<3"
opentelemetry-distro = "^0.41b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
